@@ -2512,7 +2512,7 @@ cc_process_args(struct args *args, struct args **preprocessor_args,
 			continue;
 		}
 
-		/* Same as above but options with concatenated argument. */
+		/* Same as above but short options with concatenated argument. */
 		if (compopt_short(compopt_takes_path, argv[i])) {
 			char *relpath;
 			char *option;
@@ -2528,6 +2528,30 @@ cc_process_args(struct args *args, struct args **preprocessor_args,
 			free(relpath);
 			free(option);
 			continue;
+		}
+
+		/* Same as above but long options with concatenated argument beginning with
+		 * a slash. */
+		if (argv[i][0] == '-') {
+			char *slash_pos = strchr(argv[i], '/');
+			if (slash_pos) {
+				char *option = x_strndup(argv[i], slash_pos - argv[i]);
+				if (compopt_affects_cpp(option)) {
+					if (compopt_takes_concat_arg(option)) {
+						char *relpath = make_relative_path(x_strdup(slash_pos));
+						args_add(cpp_args, option);
+						args_add(cpp_args, relpath);
+						free(relpath);
+					} else {
+						args_add(cpp_args, argv[i]);
+					}
+				} else {
+					args_add(stripped_args, argv[i]);
+				}
+
+				free(option);
+				continue;
+			}
 		}
 
 		/* options that take an argument */
