@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010-2015 Joel Rosdahl
+ * Copyright (C) 2010-2016 Joel Rosdahl
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -295,6 +295,51 @@ TEST(fprofile_flag_with_nonexisting_dir_should_not_be_rewritten)
 	CHECK_ARGS_EQ_FREE12(exp_cc, act_cc);
 
 	args_free(orig);
+}
+
+TEST(isystem_flag_with_separate_arg_should_be_rewritten_if_basedir_is_used)
+{
+	extern char *current_working_dir;
+	char *arg_string;
+	struct args *orig;
+	struct args *act_cpp = NULL, *act_cc = NULL;
+
+	create_file("foo.c", "");
+	free(conf->base_dir);
+	conf->base_dir = x_strdup("/");
+	current_working_dir = get_cwd();
+	arg_string = format("cc -isystem %s/foo -c foo.c", current_working_dir);
+	orig = args_init_from_string(arg_string);
+
+	CHECK(cc_process_args(orig, &act_cpp, &act_cc));
+	CHECK_STR_EQ("./foo", act_cpp->argv[2]);
+
+	args_free(orig);
+	args_free(act_cpp);
+	args_free(act_cc);
+}
+
+TEST(isystem_flag_with_concat_arg_should_be_rewritten_if_basedir_is_used)
+{
+	extern char *current_working_dir;
+	char *arg_string;
+	struct args *orig;
+	struct args *act_cpp = NULL, *act_cc = NULL;
+
+	create_file("foo.c", "");
+	free(conf->base_dir);
+	conf->base_dir = x_strdup("/");
+	current_working_dir = get_cwd();
+	arg_string = format("cc -isystem%s/foo -c foo.c", current_working_dir);
+	orig = args_init_from_string(arg_string);
+
+	CHECK(cc_process_args(orig, &act_cpp, &act_cc));
+	CHECK_STR_EQ("-isystem", act_cpp->argv[1]);
+	CHECK_STR_EQ("./foo", act_cpp->argv[2]);
+
+	args_free(orig);
+	args_free(act_cpp);
+	args_free(act_cc);
 }
 
 TEST_SUITE_END
